  (extdata/cpcp).

- In protcomp(), only return the amino acid composition of proteins; move
  calculation of compositional metrics to get_comptab(); remove unused function
  recomp().

- CHNOSZ is now a suggested package, not a dependency.

- Add O2AA() (stoichiometric oxidation state per residue; i.e. number of O2 in
  formation reactions from basis species).

CHANGES IN canprot 1.0.1 (2020-08-02)
-------------------------------------

- Add 'distribution' argument to CLES(), with default value of 'normal'
  to calculate the common language statistic using the normal curve
  probability. Calculation of the empirical probability (the previous
  default behavior) is done with distribution = NA.

- Remove microbial dataset glucose/HGC+18; all remaining datasets for high
  glucose are for eukaryotes.

- Add '...' argument to diffplot() (other arguments passed to plot()).

CHANGES IN canprot 1.0.0 (2020-05-11)
-------------------------------------

- New datasets: 3D/DKM+20, glucose/BTX+17, breast/LLF+20.

- Add MWAA() (molecular weight per amino acid); used in vignette plots.

- Remove O2AA() and "biosynth" option from H2OAA().

- Add qdist() - quantile distributions for up- and down-regulated
  proteins in a single dataset.

CHANGES IN canprot 0.2.0 (2020-04-27)
-------------------------------------

- This version was not submitted to CRAN. The package is archived on
  Zenodo (https://doi.org/10.5281/zenodo.3768024).

- To reduce package size and check time, don't include pre-built
  vignettes. The vignettes are now in inst/vignettes.

- Add mkvig() to compile and open vignettes from command line.

- Add demos, one for each vignette, so vignettes can be accessed via
  help.start().

- Extract high-glucose datasets from pdat_osmotic() into pdat_glucose().

- Split pdat_osmotic() into pdat_osmotic_bact (bacteria),
  pdat_osmotic_euk (eukaryotes), and pdat_osmotic_halo (halophiles).
  Data from the 2017 compilation are available through .pdat_osmotic().
