@@ -2447,3 +2447,4 @@ sp|Q7L1Q6-3,HUMAN,DKM+20,BZW1,1,39,3,19,44,24,23,4,18,43,47,14,19,14,25,18,26,21
 sp|P19971-2,HUMAN,DKM+20,TYPH,1,68,7,24,28,8,57,6,11,11,71,11,3,36,28,32,27,17,37,4,1
 sp|P0DOX3,HUMAN,LLF+20,IGD,1,34,10,17,29,9,38,11,14,20,43,7,13,49,27,29,52,45,33,14,18
 sp|P0DOX6,HUMAN,LLF+20,IGM,1,34,14,27,26,21,32,9,19,29,41,10,20,41,24,27,60,60,52,12,18
+sp|Q6ZT62,HUMAN,XZW+20,BGIN,1,81,8,34,60,15,35,17,17,29,81,21,15,51,29,37,55,40,36,3,13
