@@ -2633,15 +2633,6 @@
   doi       = {10.3389/fmicb.2018.02548},
 }
 
-@Article{ZZX+20,
-  author    = {Zhu, Tiansheng and Zhu, Yi and Xuan, Yue and Gao, Huanhuan and Cai, Xue and Piersma, Sander R. and Pham, Thang V. and Schelfhorst, Tim and Goeij De Haas, Richard R and Bijnsdorp, Irene V. and Sun, Rui and Yue, Liang and Ruan, Guan and Zhang, Qiushi and Hu, Mo and Zhou, Yue and Van Houdt, Winan J. and Lelarge, T.Y.S and Cloos, J. and Wojtuszkiewicz, Anna and Koppers-Lalic, Danijela and B{\"o}ttger, Franziska and Scheepbouwer, Chantal and Brakenhoff, R.H and van Leenders, G.J.L.H. and Ijzermans, Jan N.M. and Martens, J.W.M. and Steenbergen, R.D.M. and Grieken, N.C. and Selvarajan, Sathiyamoorthy and Mantoo, Sangeeta and Lee, Sze Sing and Yi Yeow, Serene Jie and Alkaff, Syed Muhammad Fahmy and Xiang, Nan and Sun, Yaoting and Yi, Xiao and Dai, Shaozheng and Liu, Wei and Lu, Tian and Wu, Zhicheng and Liang, Xiao and Wang, Man and Shao, Yingkuan and Zheng, Xi and Xu, Kailun and Yang, Qin and Meng, Yifan and Lu, Cong and Zhu, Jiang and Zheng, Jin{\textquoteright}e and Wang, Bo and Lou, Sai and Dai, Yibei and Xu, Chao and Yu, Chenhuan and Ying, Huazhong and Lim, Tony Kiat-hon and Wu, Jianmin and Gao, Xiaofei and Luan, Zhongzhi and Teng, Xiaodong and Wu, Peng and Huang, Shi{\textquoteright}ang and Tao, Zhihua and Iyer, N. Gopalakrishna and Zhou, Shuigeng and Shao, Wenguang and Lam, Henry and Ma, Ding and Ji, Jiafu and Kon, Oi Lian and Zheng, Shu and Aebersold, Ruedi and Jimenez, Connie R. and Guo, Tiannan},
-  journal   = {bioRxiv},
-  title     = {{DPHL}: {A} pan-human protein mass spectrometry library for robust biomarker discovery},
-  year      = {2020},
-  volume    = {DOI:10.1101/2020.02.03.931329},
-  doi       = {10.1101/2020.02.03.931329},
-}
-
 @Article{SCG+15,
   author    = {Selevsek, Nathalie and Chang, Ching-Yun and Gillet, Ludovic C. and Navarro, Pedro and Bernhardt, Oliver M. and Reiter, Lukas and Cheng, Lin-Yang and Vitek, Olga and Aebersold, Ruedi},
   journal   = {Molecular \& Cellular Proteomics},
@@ -2741,15 +2732,6 @@
   doi       = {10.1021/pr401004a},
 }
 
-@Article{LLF+20,
-  author    = {Yuxiang Lin and Ling Lin and Fangmeng Fu and Chuan Wang and Anqi Hu and Juanjuan Xie and Meichen Jiang and Zhenxin Wang and Lujie Yang and Jie Zhang and Minyan Chen and Yan Li and Rongrong Guo and Pengyuan Yang and Huali Shen},
-  journal   = {ResearchSquare},
-  title     = {Quantitative proteomics reveals stage-specific protein regulation of triple negative breast cancer},
-  year      = {2020},
-  volume    = {DOI:10.21203/rs.2.22780/v1},
-  doi       = {10.21203/rs.2.22780/v1},
-}
-
 @Article{DKM+20,
   author    = {Doron, Gilad and Klontzas, Michail E. and Mantalaris, Athanasios and Guldberg, Robert E. and Temenoff, Johnna S.},
   journal   = {Biotechnology and Bioengineering},
@@ -2770,4 +2752,64 @@
   pages     = {1791--1800},
   volume    = {60},
   doi       = {10.1007/s00125-017-4331-2},
+}
+
+@Article{ZKL+20,
+  author    = {Zhang, Jinhui and Kim, Sangyub and Li, Li and Kemp, Christopher J. and Jiang, Cheng and Lü, Junxuan},
+  journal   = {The Prostate},
+  title     = {Proteomic and transcriptomic profiling of \emph{{P}ten} gene-knockout mouse model of prostate cancer},
+  year      = {2020},
+  number    = {7},
+  pages     = {588--605},
+  volume    = {80},
+  doi       = {10.1002/pros.23972},
+}
+
+@Article{KPS+20,
+  author    = {Kelemen, Olga and Pla, Indira and Sanchez, Aniel and Rezeli, Melinda and Szasz, Attila Marcell and Malm, Johan and Laszlo, Viktoria and Kwon, Ho Jeong and Dome, Balazs and Marko-Varga, Gyorgy},
+  journal   = {Clinical and Translational Medicine},
+  title     = {Proteomic analysis enables distinction of early- versus advanced-stage lung adenocarcinomas},
+  year      = {2020},
+  number    = {2},
+  pages     = {e106},
+  volume    = {10},
+  doi       = {10.1002/ctm2.106},
+}
+
+@Article{LDM+20,
+  author    = {Latosinska, Agnieszka and Davalieva, Katarina and Makridakis, Manousos and Mullen, William and Schanstra, Joost P. and Vlahou, Antonia and Mischak, Harald and Frantzi, Maria},
+  journal   = {Diagnostics},
+  title     = {Molecular changes in tissue proteome during prostate cancer development: Proof-of-principle investigation},
+  year      = {2020},
+  number    = {9},
+  pages     = {655},
+  volume    = {10},
+  doi       = {10.3390/diagnostics10090655},
+}
+
+@Article{XZW+20,
+  author    = {Jun-Yu Xu and Chunchao Zhang and Xiang Wang and Linhui Zhai and Yiming Ma and Yousheng Mao and Kun Qian and Changqing Sun and Zhiwei Liu and Shangwen Jiang and Minghui Wang and Lin Feng and Lei Zhao and Ping Liu and Bo Wang and Xin Zhao and Hui Xie and Xiaoyun Yang and Liyuan Zhao and Yafei Chang and Jingya Jia and Xijun Wang and Yimin Zhang and Yaru Wang and Yikun Yang and Zhixiang Wu and Longhai Yang and Bin Liu and Teng Zhao and Shengguo Ren and Aihua Sun and Yang Zhao and Wantao Ying and Fei Wang and Guangshun Wang and Yi Zhang and Shujun Cheng and Jun Qin and Xiaohong Qian and Yi Wang and Jing Li and Fuchu He and Ting Xiao and Minjia Tan},
+  journal   = {Cell},
+  title     = {Integrative proteomic characterization of human lung adenocarcinoma},
+  year      = {2020},
+  number    = {1},
+  pages     = {245--261},
+  volume    = {182},
+  doi       = {10.1016/j.cell.2020.05.043},
+}
+
+@Article{LLF+20,
+  author    = {Lin, Yuxiang and Lin, Ling and Fu, Fangmeng and Wang, Chuan and Hu, Anqi and Xie, Juanjuan and Jiang, Meichen and Wang, Zhenxin and Yang, Lujie and Guo, Rongrong and Yang, Pengyuan and Shen, Huali},
+  journal   = {Breast Cancer Research and Treatment},
+  title     = {Quantitative proteomics reveals stage-specific protein regulation of triple negative breast cancer},
+  year      = {2020},
+  doi       = {10.1007/s10549-020-05916-8},
+}
+
+@Article{ZZX+20,
+  author    = {Tiansheng Zhu and Yi Zhu and Yue Xuan and Huanhuan Gao and Xue Cai and Sander R. Piersma and Thang V. Pham and Tim Schelfhorst and Richard R.G.D. Haas and Irene V. Bijnsdorp and Rui Sun and Liang Yue and Guan Ruan and Qiushi Zhang and Mo Hu and Yue Zhou and Winan J. {Van Houdt} and Tessa Y.S. {Le Large} and Jacqueline Cloos and Anna Wojtuszkiewicz and Danijela Koppers-Lalic and Franziska Böttger and Chantal Scheepbouwer and Ruud H. Brakenhoff and Geert J.L.H. {van Leenders} and Jan N.M. Ijzermans and John W.M. Martens and Renske D.M. Steenbergen and Nicole C. Grieken and Sathiyamoorthy Selvarajan and Sangeeta Mantoo and Sze S. Lee and Serene J.Y. Yeow and Syed M.F. Alkaff and Nan Xiang and Yaoting Sun and Xiao Yi and Shaozheng Dai and Wei Liu and Tian Lu and Zhicheng Wu and Xiao Liang and Man Wang and Yingkuan Shao and Xi Zheng and Kailun Xu and Qin Yang and Yifan Meng and Cong Lu and Jiang Zhu and Jin'e Zheng and Bo Wang and Sai Lou and Yibei Dai and Chao Xu and Chenhuan Yu and Huazhong Ying and Tony K. Lim and Jianmin Wu and Xiaofei Gao and Zhongzhi Luan and Xiaodong Teng and Peng Wu and Shi'ang Huang and Zhihua Tao and Narayanan G. Iyer and Shuigeng Zhou and Wenguang Shao and Henry Lam and Ding Ma and Jiafu Ji and Oi L. Kon and Shu Zheng and Ruedi Aebersold and Connie R. Jimenez and Tiannan Guo},
+  journal   = {Genomics, Proteomics \& Bioinformatics},
+  title     = {{DPHL}: {A} {DIA} pan-human protein mass spectrometry library for robust biomarker discovery},
+  year      = {2020},
+  doi       = {10.1016/j.gpb.2019.11.008},
 }
