@@ -27,3 +27,6 @@ YCC+17_SqCC.Glycoprotein,"SCC.Glycoprotein / ANT",,64,86,-0.1285,-0.1227,0.0059,
 YCC+17_ADC.Oncogene,"ADC.Oncogene / ANT",,385,72,-0.1165,-0.1318,-0.0153,-0.7669,-0.7465,0.0203,4.3853,3.5455,-0.8398,4.9921,4.5417,-0.4505,604,457.5,-146.5
 YCC+17_ADC.TSG,"ADC.TSG / ANT",,286,42,-0.1132,-0.1273,-0.0141,-0.7631,-0.7346,0.0284,4.5962,5.2632,0.6669,4.9895,5.1951,0.2056,577,387.5,-189.5
 YCC+17_ADC.Glycoprotein,"ADC.Glycoprotein / ANT",,83,134,-0.1238,-0.1296,-0.0058,-0.7836,-0.8184,-0.0348,6.2432,4.4153,-1.828,5.4458,4.8647,-0.5811,655,559.5,-95.5
+KPS+20_early,"ADC / adjacent normal early",,86,279,-0.1342,-0.1259,0.0083,-0.7513,-0.7375,0.0138,5.2329,3.092,-2.1409,5.0241,4.172,-0.8521,355,428,73
+KPS+20_advanced,"ADC / adjacent normal advanced",,92,274,-0.1218,-0.1282,-0.0065,-0.7441,-0.7428,0.0013,4.9,2.9802,-1.9198,4.8043,4.0037,-0.8007,391,448.5,57.5
+XZW+20,"ADC / non-cancerous adjacent",,603,2735,-0.1189,-0.1327,-0.0138,-0.7677,-0.7538,0.0138,5.3096,2.9878,-2.3218,5.401,4.0634,-1.3376,583,454,-129
