@@ -101,7 +101,9 @@ __r__. __s__. Tables S4d (GS = 6) and S4f (GS ≥ 8 or GS = 6) of @MMF+20 (GS: G
 __t__. Supplementary Table S3a of @TOT+19.
 __u__. __v__. Table S5 of @ZYW+19 (LG: low-grade PCa; HG: high-grade PCa).
 __w__. Supplemental Table S2 of @KHN+20, filtered to include proteins with log~2~ fold change > 1 or < -1 in at least one experiment.
-__x__. Table S2, Sheet D:S3-SWATH_protein_matrix of @SHC+20, filtered to include proteins quantified in at least 50% of both tumor and normal samples and with median fold change > 2 or < 0.5.
-__y__. Supplementary Tables S3E--S3F of @ZZX+20.
+__x__. Table S2 of @LDM+20.
+__y__. Table S2, Sheet D:S3-SWATH_protein_matrix of @SHC+20, filtered to include proteins quantified in at least 50% of both tumor and normal samples and with median fold change > 2 or < 0.5.
+__z__. Table S4 of @ZKL+20 (*Pten* gene knockout vs wild-type).
+__A__. Supplementary Tables S3E--S3F of @ZZX+20.
 
 ## References
