@@ -22,5 +22,7 @@ TOT+19,"FFPE TMA PCa / normal",,36,86,-0.1089,-0.1405,-0.0316,-0.7628,-0.7295,0.
 ZYW+19_LG,"OCT LG PCa / adjacent normal",,143,54,-0.0992,-0.1423,-0.043,-0.7778,-0.7709,0.0069,5.3733,2.1071,-3.2662,5.1625,3.5938,-1.5687,610,469,-141
 ZYW+19_HG,"OCT HG PCa / adjacent normal",,215,94,-0.1205,-0.1379,-0.0173,-0.7667,-0.7237,0.043,4.9626,2.7292,-2.2335,4.693,3.8824,-0.8106,540,331.5,-208.5
 KHN+20,"PCa / control",,227,125,-0.1257,-0.145,-0.0193,-0.7795,-0.7412,0.0383,5.8889,2.3421,-3.5468,4.981,3.4375,-1.5435,264,311,47
+LDM+20,"PCa / BPH",,73,72,-0.1227,-0.1425,-0.0198,-0.7795,-0.7337,0.0458,4.0328,2.9524,-1.0804,4.7083,3.7083,-1,445,446.5,1.5
 SHC+20,"FFPE PCa / BPH",,58,308,-0.1083,-0.1421,-0.0338,-0.7628,-0.7262,0.0366,4.75,2.9638,-1.7862,5.3621,3.7443,-1.6178,606,360.5,-245.5
+ZKL+20,"mouse Pten-KO / WT",,48,55,-0.1405,-0.1381,0.0024,-0.7751,-0.7334,0.0417,NA,NA,NA,NA,NA,NA,297,346,49
 ZZX+20_CiRT,"tumor / normal CiRT",,104,1451,-0.1122,-0.1354,-0.0232,-0.7579,-0.7419,0.016,5.1771,2.6677,-2.5094,5.3204,3.874,-1.4464,674,433,-241
